--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.3.3+1
   intl: ^0.20.2
   path_provider: ^2.1.5
+  get: ^4.7.2
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
